commit changes pretty please

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -21,7 +21,7 @@
 					<!-- Logo -->
 						<div id="logo">
 							<span class="image avatar48"><img src="images/avatar.jpg" alt="" /></span>
-							<h1 id="title">Emma Jayne Jones</h1>
+							<h1 id="title">Emma J Jones</h1>
 							<p>Geography Undergraduate</p>
 						</div>
 
@@ -40,8 +40,8 @@
 
 					<!-- Social Icons -->
 						<ul class="icons">
-							<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
-							<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+							<li><a href="#" class="icon brands fa-github"><span class="label">github.com/fentyegg</span></a></li>
+							<li><a href="#" class="icon solid fa-envelope"><span class="label">jemmageog@gmail.com</span></a></li>
 						</ul>
 
 				</div>
@@ -56,8 +56,8 @@
 						<div class="container">
 
 							<header>
-								<h2 class="alt"> Welcome</a> to my website!<br />></a>.</h2>
-								<p>My name is Emma Jones! I am an undergraduate student at the University of Tennessee Knoxville.</p>
+								<h2 class="alt"> Welcome</a> to my website!<h2>
+								<p>My name is Emma Jayne Jones and I am an undergraduate student at the University of Tennessee Knoxville.</p>
 							</header>
 
 							<footer>
