--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -56,8 +56,7 @@
 						<div class="container">
 
 							<header>
-								<h2 class="alt"> Welcome</a> to my website!<h2>
-								<p>My name is Emma Jayne Jones and I am an undergraduate student at the University of Tennessee Knoxville.</p>
+								<h2 class="alt"> Welcome</a> to my portfolio website!<h2>
 							</header>
 
 							<footer>
